# wxTmap-Explorer-A-Tmap-Inspired-Navigation-GUI-using-OpenStreetMap

./: .gitignore  LICENSE  PROJECT-STATUS.md  README.md  test-runner.py  test_results.json
.github/workflows/: ci.yml  jira-transitions.yml  pr-automerge-merge.yml  pr-autotitle.yml
app/: CMakeLists.txt  Makefile  ProjectMap.h  RouteProgressPipeline_fixed.h  metrics_test.csv  render_pipeline_test
app/include/: AppFrame.h  DebugFrame.h  MapPanel.h  ProjectMap.h  Types.h  WxTmapExplorer.h
app/include/domain/: Domain.h  Types.h
app/include/domain/services/: RouteProgressCalculator.h
app/include/domain/services/performance/: PerformanceBenchmark.h  RouteQualityAnalyzer.h
app/include/domain/state/: HudStateStore.h  NavigationState.h  RouteProgressState.h
app/include/infrastructure/: Infrastructure.h
app/include/infrastructure/persistence/: ConcurrencyManager.h  CrashRecovery.h  DatabaseConfig.h  PrefetchSystem.h
app/include/infrastructure/persistence/cache/: CacheManager.h
app/include/infrastructure/rendering/: RenderPipeline.h
app/include/infrastructure/rendering/performance/: FpsValidator.h  FrameRateStabilizer.h  JitterCompensator.h  PerformanceBenchmark.h  PerformanceMonitor.h
app/include/presentation/: Presentation.h
app/include/presentation/components/: BaseComponent.h  CameraController.h  CameraPreset.h  EnhancedProgressBar.h  LocationPuck.h  MapOverlayHud.h  MapOverlayTheme.h  NavigationProgressBar.h  PolylineHighlight.h  PolylineStyler.h  StateSubscriberComponent.h  TransitionAnimator.h  TurnBanner.h  UiDispatcher.h  VisualFeedbackManager.h  WaypointListPanel.h
app/include/presentation/views/frames/: AppFrame.h  DebugFrame.h
app/include/presentation/views/panels/: MapPanel.h
app/include/render/: RenderMetricsExporter.h  RenderPipeline.h
app/include/ui/: CameraController.h  LocationPuck.h  MapOverlayHud.h  MapOverlayTheme.h  NavigationProgressBar.h  PolylineHighlight.h  PolylineStyler.h  TurnBanner.h  UiDispatcher.h  WaypointListPanel.h
app/src/: AppFrame.cpp  DebugFrame.cpp  MapPanel.cpp  main.cpp
app/src/domain/services/: RouteProgressCalculator.cpp
app/src/domain/state/: HudStateStore.cpp
app/src/infrastructure/rendering/: RenderMetricsExporter.cpp  RenderPipeline.cpp
app/src/presentation/: main.cpp
app/src/presentation/components/: BaseComponent.cpp  CameraController.cpp  CameraPreset.cpp  EnhancedProgressBar.cpp  LocationPuck.cpp  MapOverlayHud.cpp  NavigationProgressBar.cpp  PolylineHighlight.cpp  RouteProgressPipeline.cpp  TransitionAnimator.cpp  TurnBanner.cpp  VisualFeedbackManager.cpp  WaypointListPanel.cpp
app/src/presentation/views/frames/: AppFrame.cpp  DebugFrame.cpp
app/src/presentation/views/panels/: MapPanel.cpp
app/src/render/: RenderMetricsExporter.cpp  RenderPipeline.cpp
app/src/ui/: CameraController.cpp  LocationPuck.cpp  MapOverlayHud.cpp  NavigationProgressBar.cpp  PolylineHighlight.cpp  TurnBanner.cpp  WaypointListPanel.cpp
app/test/: test_renderpipeline.cpp
app/test/domain/state/: HudStateStoreTest.cpp  RouteProgressTest.cpp
app/test/ui/: CameraPresetTest.cpp  LocationPuckTset.cpp  MapOverlayHudTest.cpp  PolylineStyleTest.cpp  RoutePolylineHighlightTest.cpp  TurnBannerTest.cpp  UiDispatcherTest.cpp  WaypointListPanelTest.cpp
dev-logs/: README.md
dev-logs/daily-logs/: 2025-10-07.md  Dev-WXT-59.md  Dev-WXT-60.md  Migration-Guide.md  WXT-Architecture-Optimization.md
dev-logs/desc/: Desc-WXT-4.md  Desc-WXT-51.md  Desc-WXT-52.md  Desc-WXT-53.md  Desc-WXT-54.md  Desc-WXT-55.md  Desc-WXT-56.md  Desc-WXT-57.md  Desc-WXT-58.md  Desc-WXT-59.md  Desc-WXT-60.md  Desc-WXT-61.md  Desc-WXT-62.md
dev-logs/issue-logs/: WXT-4.md  WXT-51.md  WXT-52.md  WXT-53.md  WXT-54.md  WXT-55.md  WXT-56.md  WXT-57.md  WXT-58.md  WXT-59.md  rep_templete.md
dev-logs/test-log/: Test-WXT-4.md  Test-WXT-55.md  Test-WXT-56.md  Test-WXT-57.md  Test-WXT-58.md  Test-WXT-59.md  Test-WXT-60.md  Test-WXT-61.md  Test-WXT-62.md
docs/: GitHub-Copilot-CLI-Guide.md  WXT-58-description-template.md  case-study-jira.md  jira-cloud-api-setup.md
docs/jira/: README.md  backlog-seed.csv  integration.md  sample-project.md
docs/jira/automation/: README.md  commit-labeling.json  fixversion-on-merge.json  pr-created-in-progress.json  pr-merged-done.json  stale-issues-ping.json
scripts/: jira_transition.sh
scripts/git-hooks/: commit-msg
